# board-image-exporter-juliet40-b

./: .ai-repository-summary.md  .gitignore  .pyright-ci.json  README.md  UV_MIGRATION.md  UV_MIGRATION_SUMMARY.md  ai-new-app-template.code-workspace  board-image-exporter.code-workspace  cursor_project_setup_orchestration.md  openmemory.md  pyproject.toml
.cursor/plans/: project_setup_workflow_78f9fa21.plan.md
.cursor/rules/: openmemory.mdc
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  copilot-setup-steps.yml
.kilocode/workflows/: get-out-of-trouble.md
.qwen/: settings.json
docs/: developer_guide.md  error_reference.md
docs/debriefs/: project-setup.md
plan_docs/: Application Implementation Specification.md  PCB Renderer CLI Specification.md  architecture_guide.md  development_plan.md  implementation_guide.md
scripts/: README.md  resolve-threads.ps1
scripts/security/: allowlist_flags.py
src/llm_assistor/: __init__.py  cli.py  llm_assistant.py  validator.py
src/pcb_render/: __init__.py  cli.py  errors.py  geometry.py  models.py  parse.py  render.py  units.py  validate.py
tests/: __init__.py  conftest.py  test_cli_smoke.py  test_models.py  test_parse.py  test_units.py  test_validate.py
tests/fixtures/: complex_board.json  invalid_boards.py  minimal_board.json
tests/fixtures/invalid_boards/: invalid_design_units.json  invalid_rotation.json  invalid_via_geometry.json  missing_boundary.json  negative_diameter.json  negative_width.json  nonexistent_layer.json
tests/invalid_boards/: component_outside_boundary.json  duplicate_layer_hash.json  empty_stackup.json  invalid_design_units.json  invalid_rotation.json  invalid_via_geometry.json  malformed_coordinates.json  negative_diameter.json  negative_width.json  non_sequential_layer_indices.json  nonexistent_layer.json  nonexistent_net.json  self_intersecting_boundary.json
