[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcb-renderer-cli"
version = "0.1.0"
description = "CLI tool to parse, validate, and render PCB ECAD JSON inputs."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
authors = [
    {name = "nam20485"}
]
keywords = ["pcb", "ecad", "renderer", "cli", "json", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "typer[all]>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.90",
    "syrupy>=4.6",
    "ruff>=0.6.0",
]

[project.scripts]
pcb-render = "pcb_render.cli:main"

[project.urls]
Homepage = "https://github.com/nam20485/board-image-exporter-juliet40-b"
Repository = "https://github.com/nam20485/board-image-exporter-juliet40-b"
Issues = "https://github.com/nam20485/board-image-exporter-juliet40-b/issues"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pcb_render"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "ARG", "PTH", "PD", "PLE", "PLW", "TRY", "NPY", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
]
