[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcb-renderer"
version = "0.1.0"
description = "A lightweight, high-performance CLI tool to parse ECAD JSON files and render them into accurate visual representations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "PCB Renderer Team" }
]
keywords = ["pcb", "ecad", "renderer", "cli", "svg", "png", "pdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic~=2.0",
    "numpy~=1.26",
    "matplotlib~=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "syrupy>=4.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pytest-cov>=4.0",
]

# [project.scripts]
# CLI module not yet implemented - reserved for Phase 2
# pcb-render = "pcb_render.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pcb_render"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "DTZ", "T10"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "*.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["pcb_render"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=pcb_render",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportUnknownParameterType = "error"
